# continuum

./: .env  .gitignore  Cargo.toml  README.md
continuum-auth/: Cargo.toml
continuum-auth/src/: cert.rs  lib.rs
continuum-auth/src/authn/: error.rs  mod.rs  proof.rs  replay_cache.rs  verify.rs
continuum-auth/src/enrollment/: error.rs  mod.rs  session.rs  token.rs
continuum-auth/src/identity/: keys.rs  mod.rs
continuum-auth/src/trust/: known_hosts.rs  mod.rs
continuum-cli/: Cargo.toml
continuum-cli/src/: main.rs  relay.rs  utils.rs
continuum-cli/src/commands/: clients.rs  enroll.rs  mod.rs
continuum-cli/src/tls/: client.rs  mod.rs
continuum-cli/src/trust/: mod.rs  store.rs
continuum-core/: Cargo.toml
continuum-core/src/: audit.rs  identity.rs  lib.rs  task.rs
continuum-core/src/relay/: device_auth.rs  mod.rs  tunnel_adapter.rs
continuum-daemon/: Cargo.toml
continuum-daemon/migrations/: 20260114075956_initial_schema.sql
continuum-daemon/src/: convert.rs  db.rs  ipc.rs  main.rs  relay.rs  store.rs  supervisor.rs
continuum-daemon/src/auth/: mod.rs  store.rs  trust.rs
continuum-daemon/src/services/: enrollment.rs  mod.rs  rate_limit.rs
continuum-daemon/src/tls/: cert.rs  connect_info.rs  mod.rs  reload.rs  server.rs
continuum-daemon/tests/: enrollment_e2e.rs
continuum-daemon/tests/common/: harness.rs  mod.rs
continuum-mobile/: Cargo.toml  build.rs  uniffi.toml
continuum-mobile/src/: client.rs  enrollment.rs  errors.rs  lib.rs  models.rs  storage.rs  tls.rs  tunnel.rs
continuum-proto/: Cargo.toml  build.rs
continuum-proto/proto/: continuum.proto  enrollment.proto
continuum-proto/src/: lib.rs
continuum-pty/: Cargo.toml
continuum-pty/src/: error.rs  lib.rs  resize.rs  signal.rs  spawn.rs  types.rs  wait.rs
continuum-pty/src/platform/: linux.rs  macos.rs  mod.rs
continuum-shim/: Cargo.toml
continuum-shim-proto/: Cargo.toml  build.rs
continuum-shim-proto/proto/: shim.proto
continuum-shim-proto/src/: lib.rs
continuum-shim/examples/: mock_daemon.rs
continuum-shim/src/: args.rs  child.rs  lib.rs  main.rs  run.rs
continuum-shim/src/attention/: detector.rs  mod.rs  patterns.rs  strip_ansi.rs
continuum-shim/src/io/: framing.rs  mod.rs  pty_reader.rs  pty_writer.rs
continuum-shim/src/ipc/: client.rs  mod.rs  unix.rs
continuum-shim/src/util/: mod.rs  shutdown.rs
continuum-shim/tests/: integration.rs
docs/: README.md  enrollment.md
docs/continuum-auth/: 00_Overview.md  01_Flows.md  02_Threat Model.md  03_Persistence.md
plans/: enforce-billing-plan-limits.md  feat-remote-enrollment-token-generation.md  feat-short-enrollment-codes.md
scripts/: validate-uniffi.sh
test-scripts/: README.md  countdown.sh  echo-loop.sh  env-test.sh  exit-codes.sh  interactive-cat.sh  large-output.sh  mixed-output.sh  prompt-loop.sh  signal-handler.sh  slow-start.sh
