[workspace]
resolver = "2"
members = [
    "continuum-core",
    "continuum-proto",
    "continuum-shim-proto",
    "continuum-daemon",
    "continuum-cli",
    "continuum-pty",
    "continuum-shim",
]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Identifiers
uuid = { version = "1.19", features = ["v4", "serde"] }

# Protobuf
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tonic-build = "0.12"

# Async runtime
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# CLI
clap = { version = "4", features = ["derive"] }