[workspace]
resolver = "2"
members = [
    "continuum-core",
    "continuum-proto",
    "continuum-shim-proto",
    "continuum-daemon",
    "continuum-cli",
    "continuum-pty",
    "continuum-shim", "continuum-auth",
]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Identifiers
uuid = { version = "1.19", features = ["v4", "serde"] }

# Protobuf
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tonic-build = "0.12"

# Async runtime
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# CLI
clap = { version = "4", features = ["derive"] }

# System
libc = "0.2"

# Security
argon2 = "0.5.3"
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
keyring = "3.6.3"
rcgen = "0.14.6"
rustls = "0.23.36"
snow = "0.10.0"
zeroize = "1.8.2"

# Random number generation
rand = "0.8"
