[workspace]
resolver = "2"
members = [
    "continuum-core",
    "continuum-proto",
    "continuum-shim-proto",
    "continuum-daemon",
    "continuum-cli",
    "continuum-pty",
    "continuum-shim", "continuum-auth",
]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Random number generation
rand = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Identifiers
uuid = { version = "1.19", features = ["v4", "serde"] }

# Protobuf
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tonic-build = "0.12"

# Async runtime
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# CLI
clap = { version = "4", features = ["derive"] }

# System
libc = "0.2"

# Security
argon2 = "0.5.3"
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
getrandom = "0.3"
keyring = "3.6.3"
rcgen = "0.14.6"
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std", "tls12"] }
snow = "0.10.0"
subtle = "2.6"
zeroize = "1.8.2"

# TLS utilities
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"

# Crypto/hashing
sha2 = "0.10"
hex = "0.4"
dashmap = "6"

# Persistence
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
time = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Environment
dotenvy = "0.15"

# Bytes utilities
bytes = "1"

# Relay message definitions
continuum-relay-proto = { git = "https://github.com/oaimtiaz/continuum-relay-proto.git", branch = "main" }