[package]
name = "continuum-auth"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"


[dependencies]
argon2 = { workspace = true }
dirs = { workspace = true }
ed25519-dalek = { workspace = true, features = ["zeroize", "rand_core"] }
keyring = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
snow = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
thiserror = { workspace = true }
rand = { workspace = true }
hex = "0.4.3"
sha2 = "0.10.9"
base64.workspace = true
