[package]
name = "continuum-auth"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"


[dependencies]
# Core cryptography
ed25519-dalek = { workspace = true, features = ["zeroize", "rand_core", "serde", "pkcs8"] }
sha2 = "0.10"
subtle = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }

# Encoding
base64 = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Random
rand = { workspace = true }

# X.509 certificate parsing
x509-parser = "0.17"

# Replay cache implementation (H6)
dashmap = "6"

# HMAC for trust store integrity (H2)
hmac = "0.12"