[package]
name = "continuum-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "continuum"
path = "src/main.rs"

[dependencies]
continuum-proto = { path = "../continuum-proto" }
tokio = { workspace = true, features = ["io-std", "signal"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }