[package]
name = "continuum-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "continuum"
path = "src/main.rs"

[dependencies]
continuum-proto = { path = "../continuum-proto" }
continuum-auth = { path = "../continuum-auth" }
tokio = { workspace = true, features = ["io-std", "signal"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }

# TLS
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
hyper = { version = "1.5", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http2", "ring", "tls12"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

# Crypto
sha2 = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
x509-parser = "0.17"
zeroize = { workspace = true }

# Relay message definitions
continuum-relay-proto = { workspace = true }

# Persistence
serde = { workspace = true }
toml = { workspace = true }
directories = "6"
