[package]
name = "continuum-daemon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
continuum-core = { path = "../continuum-core" }
continuum-proto = { path = "../continuum-proto" }
continuum-shim-proto = { path = "../continuum-shim-proto" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
bytes = "1.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
thiserror = { workspace = true }
hostname = "0.4"
tonic-reflection = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
serde_json = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.15"
